RESOLVED FIXED97031
Date picker isn't inputting after 'OK'
https://bugs.webkit.org/show_bug.cgi?id=97031
Summary Date picker isn't inputting after 'OK'
jecao
Reported 2012-09-18 11:27:21 PDT
- go to http://browser.swlab.rim.net/test/input/input_fcc_selection/form.html - test#11 - select a date and tap 'OK' - no input in the field. (the 'OK' button is working, i.e. the pop-up will close)
Attachments
Patch (1.50 KB, patch)
2012-09-18 11:34 PDT, jecao
no flags
Patch (1.56 KB, patch)
2012-09-18 11:41 PDT, jecao
no flags
Patch (1.52 KB, patch)
2012-09-18 11:48 PDT, jecao
no flags
jecao
Comment 1 2012-09-18 11:34:29 PDT
Mike Fenton
Comment 2 2012-09-18 11:38:35 PDT
Comment on attachment 164591 [details] Patch Looks good to me. Nice find.
Rob Buis
Comment 3 2012-09-18 11:39:26 PDT
Comment on attachment 164591 [details] Patch Good find.
jecao
Comment 4 2012-09-18 11:41:12 PDT
Rob Buis
Comment 5 2012-09-18 11:43:23 PDT
Comment on attachment 164593 [details] Patch Ok.
Rob Buis
Comment 6 2012-09-18 11:46:12 PDT
Comment on attachment 164593 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=164593&action=review > Source/WebKit/blackberry/ChangeLog:4 > + https://bugs.webkit.org/show_bug.cgi?id=97031 Add an empty line here please. > Source/WebKit/blackberry/ChangeLog:5 > + https://przilla.ott.qnx.com/bugzilla/show_bug.cgi?id=208052 Just abbreviate this to PR208052 please.
jecao
Comment 7 2012-09-18 11:48:15 PDT
Rob Buis
Comment 8 2012-09-18 11:49:46 PDT
Comment on attachment 164597 [details] Patch Ok!
WebKit Review Bot
Comment 9 2012-09-18 12:55:33 PDT
Comment on attachment 164597 [details] Patch Clearing flags on attachment: 164597 Committed r128923: <http://trac.webkit.org/changeset/128923>
WebKit Review Bot
Comment 10 2012-09-18 12:55:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.