[BlackBerry] Date picker isn't inputting after 'OK' https://bugs.webkit.org/show_bug.cgi?id=97031

PR208052

Patch by Jessica Cao <jecao@rim.com> on 2012-09-18
Reviewed by Rob Buis

Checking for !values.contains("-1") will match valid strings like "2012-09-18". Use value != "-1" instead.

* WebCoreSupport/DatePickerClient.cpp:
(WebCore::DatePickerClient::setValueAndClosePopup):

Canonical link: https://commits.webkit.org/114986@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128923 268f45cc-cd09-0410-ab3c-d52691b4dbfc