Source/WebKit/blackberry/WebCoreSupport/DatePickerClient.cpp
@@ -123,7 +123,7 @@ void DatePickerClient::setValueAndClosePopup(int, const String& value)
     // Return -1 if user cancel the selection.
     ASSERT(m_element);
 
-    if (!value.contains("-1"))
+    if (value != "-1")
         m_element->setValue(value);
     closePopup();
 }
